# FEM

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agent/: harness-engineer.md
.claude/skills/run-fem-milestone/: SKILL.md
scripts/: beam3d.py  cantilever.py  cantilever_cr.py  cantilever_nl.py  gravity_drop.py  run_case.py  sanity.py  stretch_beam.py  vibration.py  vibration_cr.py
src/femlab/: __init__.py
src/femlab/core/: __init__.py  assembly.py  assembly_cr.py  assembly_nl.py  basis.py  boundary.py  corotational.py  dynamics.py  dynamics_nl.py  element.py  element_nl.py  hyperelastic.py  kinematics.py  mass.py  material.py  newton.py  quadrature.py  solver.py
src/femlab/mesh/: __init__.py  box.py  rectangle.py
src/femlab/viz/: __init__.py  viewer.py
tests/: conftest.py  test_basis.py  test_cantilever.py  test_corotational.py  test_dynamics.py  test_dynamics_nl.py  test_element.py  test_env.py  test_hyperelastic.py  test_kinematics.py  test_mass.py  test_newton.py  test_patch.py  test_patch_3d.py  test_quadrature.py  test_stretch_beam.py  test_tet4.py  test_viz.py
